<resources>
    <string name="app_name">MMM</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>

    <array name="languages">
        <item>中文</item>
        <item>English</item>
    </array>

    <array name="currencyLists">
        <item>USD</item>
        <item>HKD</item>
        <item>RMB</item>
    </array>

    <array name="WSLists">
        <item>Monday</item>
        <item>Sunday</item>
    </array>

    <array name="storeNames">
        <item>Taste</item>
        <item>Mannings</item>
    </array>

    <array name="categories">
        <item>Food</item>
        <item>Shopping</item>
    </array>

    <string-array name="InputTypes">
        <item>Expense</item>
        <item>Income</item>
        <item>Coupon</item>
    </string-array>
    <string-array name="InputTypes2">
        <item>Income</item>
        <item>Expense</item>
        <item>Coupon</item>
    </string-array>


    <string name="enter_amount">Enter Amount</string>
    <string name="food_amp_drinks"><![CDATA[Food&Drinks]]></string>
    <string name="transportation">Transportation</string>
    <string name="health">Health</string>
    <string name="home">Home</string>
    <string name="shopping">Shopping</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="social">Social</string>
    <string name="travel">Travel</string>
    <string name="education">Education</string>
    <string name="action_settings">Settings</string>
    <string name="go">GO</string>
    <string name="save">SAVE</string>
    <string name="investment">Investment</string>
    <string name="salary">Salary</string>
    <string name="red_pocket">Red Pocket</string>
    <string name="back">BACK</string>
    <string name="enter_notes">Enter Notes</string>

    <array name="types">
        <item>Food</item>
        <item>Shopping</item>
        <item>Books</item>
        <item>Others</item>
    </array>
    <string name="spin_prompt">Choose a Category</string>

    <string name="typeHere">Type Here</string>
    <string name="note">Add Notes Here</string>
    <string name="label_store_name">Store Name</string>
    <string name="label_note">Note</string>
    <string name="label_expiry_date">Expiry Date</string>
</resources>
