<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    tools:context="com.example.huiying.mmm.AddScreens">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:orientation="horizontal"
            android:visibility="visible"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="90dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                tools:layout_conversion_absoluteHeight="24dp"
                tools:layout_conversion_absoluteWidth="340dp"
                tools:layout_conversion_absoluteX="44dp"
                tools:layout_conversion_absoluteY="0dp"
                tools:layout_editor_absoluteX="44dp"
                tools:layout_editor_absoluteY="8dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/go"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/LinearLayout"
            android:layout_weight="1"
            android:visibility="visible"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="55dp"
            android:layout_gravity="center">

            <TableLayout
                android:layout_width="360dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_gravity="center">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="120dp">

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        app:srcCompat="@drawable/icon_eat" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        app:srcCompat="@drawable/icon_car" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        app:srcCompat="@drawable/icon_health" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/food_amp_drinks" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/transportation" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/health" />
                </TableRow>

                <TableRow
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        app:srcCompat="@drawable/icon_home" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        app:srcCompat="@drawable/icon_shopping" />

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        app:srcCompat="@drawable/icon_tel" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/home" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/shopping" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/mobile_phone" />

                </TableRow>

                <TableRow
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        app:srcCompat="@drawable/icon_social" />

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        app:srcCompat="@drawable/icon_travel" />

                    <ImageView
                        android:id="@+id/imageView9"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        app:srcCompat="@drawable/study_icon" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/social" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/travel" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/education" />
                </TableRow>

            </TableLayout>

        </ScrollView>

    </LinearLayout>


</LinearLayout>

