<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    tools:context="com.example.huiying.mmm.AddIncome">

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:elevation="1dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="90dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                tools:layout_conversion_absoluteHeight="24dp"
                tools:layout_conversion_absoluteWidth="340dp"
                tools:layout_conversion_absoluteX="44dp"
                tools:layout_conversion_absoluteY="0dp"
                tools:layout_editor_absoluteX="44dp"
                tools:layout_editor_absoluteY="8dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimaryDark"
                android:fontFamily="cursive"
                android:gravity="center"
                android:text="@string/go"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/LinearLayout"
            android:layout_weight="1"
            android:layout_gravity="center"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="55dp">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/spinner"
                android:layout_gravity="center">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="120dp">

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        app:srcCompat="@drawable/pigbank_icon" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        app:srcCompat="@drawable/icon_salary" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        app:srcCompat="@drawable/gift_icon" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/investment" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/salary" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/red_pocket" />
                </TableRow>

            </TableLayout>

        </ScrollView>
    </LinearLayout>

</LinearLayout>
