<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context="com.example.huiying.mmm.Input">

    <LinearLayout
        android:layout_width="344dp"
        android:layout_height="495dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <Button
                android:id="@+id/Backbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back" />

            <Button
                android:id="@+id/SaveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save" />
        </LinearLayout>

        <GridLayout
            android:layout_width="366dp"
            android:layout_height="match_parent"
            android:columnCount="2"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:useDefaultMargins="true"
            tools:context=".MainActivity">

            <EditText
                android:id="@+id/amountEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:digits="0123456789"
                android:ems="10"
                android:inputType="number"
                android:maxLength="6" />

            <TextView
                android:id="@+id/amountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:layout_row="0"
                android:background="@color/amount_background"
                android:elevation="@dimen/elevation"
                android:hint="@string/enter_amount"
                android:padding="@dimen/textview_padding"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="visible" />

            <TextView
                android:id="@+id/typeLabelTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="Category:"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/typeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:background="@color/result_background"
                android:elevation="@dimen/elevation"
                android:gravity="center"
                android:padding="@dimen/textview_padding"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/noteEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/noteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="fill_horizontal"
                android:layout_row="2"
                android:background="@color/amount_background"
                android:elevation="@dimen/elevation"
                android:hint="@string/enter_notes"
                android:padding="@dimen/textview_padding"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:visibility="visible" />

            <Button
                android:id="@+id/dateofRecord"
                android:layout_width="64dp"
                android:layout_height="48dp"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:background="@drawable/calendar"
                android:onClick="datePickerDialog" />

            <TextView
                android:id="@+id/recordDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:background="@color/result_background"
                android:elevation="@dimen/elevation"
                android:gravity="center"
                android:padding="@dimen/textview_padding"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </GridLayout>

    </LinearLayout>

</LinearLayout>
